# react-native-gles

./: .eslintrc.js  .flowconfig  .gitignore  .npmignore  CODE_OF_CONDUCT.md  README.md  index.d.ts  index.js  package.json  react-native-gles.podspec  react-native.config.js  tsconfig.json
android/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  GLESViewJNI.cpp  GLESViewJNI.h
android/src/main/java/com/akshetpandey/rnglesview/: GLTextureView.java  RNGLESView.java  RnglesViewManager.java  RnglesViewPackage.java
cpp/: GLESManager.cpp  GLESManager.hpp  GLESView.cpp  GLESView.hpp  GLESViewFactory.cpp  GLESViewFactory.hpp
example/: .gitignore  App.js  package.json  react-native.config.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/cpp/: CMakeLists.txt  jniHelper.cpp
example/android/app/src/main/java/com/example/: MainActivity.java  MainApplication.java
example/cpp/: TeapotScene.cpp  TeapotScene.hpp
example/cpp/NDKHelper/: NDKHelper.h  interpolator.cpp  interpolator.h  shader.cpp  shader.h  tapCamera.h  vecmath.h
example/cpp/TeapotRenderer/: TeapotRenderer.cpp  TeapotRenderer.h  teapot.inl
example/cpp/TeapotRenderer/Shaders/: ShaderPlain.fsh  VS_ShaderPlain.vsh
example/ios/: Podfile
example/ios/example/: AppDelegate.mm
example/ios/example.xcodeproj/: project.pbxproj
ios/: RnglesView.h  RnglesView.m
ios/RNGLESView/: RNGLESContextManager.h  RNGLESContextManager.m  RNGLESView.h  RNGLESView.mm  RNGLESViewManager.h  RNGLESViewManager.m
ios/RnglesView.xcodeproj/: project.pbxproj
ios/RnglesView.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/RnglesView.xcworkspace/: contents.xcworkspacedata
scripts/: examples_postinstall.js
src/: GLESScene.tsx  GLESView.tsx
